k8s/01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: moja-app
  labels:
    name: moja-app
spec:
  containers:
  - name: moja-app
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
