k8s/02-pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    name: kuard
spec:
  containers:
  - name: kuard
    image: gcr.io/kuar-demo/kuard-amd64:1
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
