k8s/05-pod-mount-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    name: kuard
spec:
  containers:
  - name: kuard
    image: gcr.io/kuar-demo/kuard-amd64:1
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
    volumeMounts:
      - name: config
        mountPath: /app/config/
  volumes:
    - name: config
      configMap:
        name: kuard-appsettings
