k8s/07-pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    name: kuard
spec:
  containers:
  - name: kuard
    image: gcr.io/kuar-demo/kuard-amd64:1
    resources:
      requests:
        memory: "128Mi"
        cpu: "0.1"
      limits:
        memory: "256Mi"
        cpu: "0.2"
