k8s/08-pod-probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    name: kuard
spec:
  containers:
  - name: kuard
    image: gcr.io/kuar-demo/kuard-amd64:1
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
    livenessProbe:
      httpGet:
        path: /healthy
        port: 8080
    readinessProbe:
      httpGet:
        path: /ready
        port: 8080
      failureThreshold: 3
      periodSeconds: 5
      initialDelaySeconds: 30
      successThreshold: 2
