k8s/09-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-www
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-www
  template:
    metadata:
      labels:
        app: my-www
    spec:
      containers:
      - name: my-www
        image: nginx
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
