k8s/19-helloapp-svc-ilb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloapp-instance-1
  labels:
    app: helloapp
spec:
  containers:
  - name: helloapp
    image: poznajkubernetes/helloapp:svc
    resources: {}
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: helloapp-instance-2
  labels:
    app: helloapp
spec:
  containers:
  - name: helloapp
    image: poznajkubernetes/helloapp:svc
    resources: {}
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: tools
  labels:
    app: tools
spec:
  containers:
  - name: tools
    image: giantswarm/tiny-tools
    resources: {}
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]
---
apiVersion: v1
kind: Service
metadata:
  name: helloapp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: helloapp
  ports:
  - port: 80
    targetPort: http
