k8s/20-svc-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:3
        resources: {}
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          failureThreshold: 3
          periodSeconds: 5
          initialDelaySeconds: 15
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  selector:
    app: kuard
  ports:
  - port: 8080
    targetPort: 8080
