k8s/24-ingress-paths.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-multi-path
  labels:
    name: echo-multi-path
spec:
  ingressClassName: nginx
  rules:
  - host: echo-multi-path.gp.kaluzny.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo-v1
            port: 
              number: 8080
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: echo-v2
            port: 
              number: 8080
