k8s/25-ingress-rewirte.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: mcr.microsoft.com/azuredocs/aci-helloworld
        resources: {}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-multi-path-app
  labels:
    name: echo-multi-path-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: echo-multi-path.gp.kaluzny.io
    http:
      paths:
      - pathType: Prefix
        path: "/app"
        backend:
          service:
            name: app
            port: 
              number: 80
