k8s/26-ingress-hostname-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-v1
  labels:
    name: echo-v1
spec:
  tls:
    - hosts:
      - "echo-v1.gp.kaluzny.io"
      secretName: gp-kaluzny-io
  ingressClassName: nginx
  rules:
  - host: echo-v1.gp.kaluzny.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo-v1
            port: 
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-v2
  labels:
    name: echo-v2
spec:
  tls:
    - hosts:
      - "echo-v2.gp.kaluzny.io"
      secretName: gp-kaluzny-io
  ingressClassName: nginx
  rules:
  - host: echo-v2.gp.kaluzny.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo-v2
            port: 
              number: 8080
