k8s/29-cannary-on-ingress-cookie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pets-cat
spec:
  selector:
    matchLabels:
      app: pets
      ver: cat
  replicas: 1
  template:
    metadata:
      labels:
        app: pets
        ver: cat
    spec:
      containers:
      - name: app
        image: lukaszkaluzny/k8s-canary-on-ingress:cat
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pets-dog
spec:
  selector:
    matchLabels:
      app: pets
      ver: dog
  replicas: 1
  template:
    metadata:
      labels:
        app: pets
        ver: dog
    spec:
      containers:
      - name: app
        image: lukaszkaluzny/k8s-canary-on-ingress:dog
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
---
kind: Service
apiVersion: v1
metadata:
  name: pets-cat
spec:
  selector:
    app: pets
    ver: cat
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: pets-dog
spec:
  selector:
    app: pets
    ver: dog
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pets-app
spec:
  selector:
    matchLabels:
      app: pets
      ver: app
  replicas: 1
  template:
    metadata:
      labels:
        app: pets
        ver: app
    spec:
      containers:
      - name: app
        image: lukaszkaluzny/k8s-canary-on-ingress:web
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: pets-app
spec:
  selector:
    app: pets
    ver: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pets-cat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kaluzny-app-cannary.gp.kaluzny.io
    http:
      paths:
      - backend:
          service:
            name: pets-cat
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: pets-app
            port: 
              number: 80
        path: /web
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pets-dog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-cookie: "dog_lover"
spec:
  ingressClassName: nginx
  rules:
  - host: kaluzny-app-cannary.gp.kaluzny.io
    http:
      paths:
      - backend:
          service:
            name: pets-dog
            port:
              number: 8080
        path: /
        pathType: Prefix
